
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 NOV 06a
  * in model/chem/_NH3_Plasma_10s/chem.c
    - in write_model_chem_template() and read_model_chem_actions(), added code to handle 
      kf1averagedmax and kf2averagedmax
  * in model/chem/_NH3_Plasma_10s/omprakas2023.c
    - in find_W_omprakas2023() and find_dW_dx_omprakas2023 now calls 
      _averaged_rate_limited() for reactions 1 and 2    
  * in model/fluid/_Navier-Stokes_plasma/fluid.hh
    - changed EDOTOVERNEMUE to EDOTJ
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), S[fluxet] is now computed with an averaged rate of EDOTJ not EDOTOVERNEMUE
  * in model/share/model_share.c
    - added _averaged_rate_limited()
    

2023 NOV 01b
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), changed the averaged rate from EDOTJ to EDOTJOVERNEMUE
    - in find_Se(), changed the averaged rate from EDOTJE to EDOTJEOVERNEMUE
    

2023 NOV 01a
  * in model/share/model_share.c
    - fixed a bug in the parameters of _averaged_rate()
    

2023 OCT 31d
  * in model/chem/_NH3_Plasma_34s/Li2012.c
    - in find_W_li2012() fixed again mistakes related to units
    - in find_dW_li2012(), fixed dkfdT mistakes
    

2023 OCT 31c
  * in model/fluid/_Navier-Stokes_plasma/fluid.hh
    - fixed a bug: EDOTJEOVERMUENE should be EDOTJE
  * in model/share/model_share.c
    - in _averaged_rate(), added better error messages when the id can not be found
    

2023 OCT 31b
  * in src/common.h
    - added typedef char averagedrates_id_type[100];
  * in model/chem/_NH3_Plasma_10s/bavafa2008.c and model/chem/_NH3_Plasma_10s/omprakas2023.c
    - changed the calls to _averaged_rate() with a id string instead of a id number